--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="rel" href="images/favicon.ico">
 	<title>J-Librairie</title>
 	%sveltekit.head%
 </head>
